v1/12-에러코드 설계서.md
# 12. 공통 에러코드 설계서

> **버전**: v1.3
> **패키지 경로**: `com.clone.carrot.global.exception`, `com.clone.carrot.global.common`
>
> **설계 원칙**
>
> | 원칙 | 내용 |
> |------|------|
> | 비즈니스 에러 / 시스템 에러 분리 | `BusinessException` 계층과 미처리 `Exception` 계층을 핸들러에서 구분 |
> | 에러코드 단일 정의 | 모든 에러는 `ErrorCode` enum 한 곳에서 관리. 코드 문자열 하드코딩 금지 |
> | API 응답 코드 일관성 | enum 이름(내부 식별자)과 API 응답 `code` 필드를 분리해 클라이언트 계약 유지 |
> | retryAfter 선택적 포함 | 재시도 가능한 에러(`ALREADY_RESERVED`, `LOCK_TIMEOUT`)에만 `retryAfter` 필드 포함 |

---

## 1. ErrorCode Enum

```java
// global/exception/ErrorCode.java
@Getter
@RequiredArgsConstructor
public enum ErrorCode {

    // ===== AUTH (A) =====
    DUPLICATE_EMAIL(HttpStatus.CONFLICT, "A001", "이미 사용 중인 이메일입니다."),
    INVALID_CREDENTIALS(HttpStatus.UNAUTHORIZED, "A002", "이메일 또는 비밀번호가 올바르지 않습니다."),
    UNAUTHORIZED(HttpStatus.UNAUTHORIZED, "A003", "인증이 필요합니다."),
    TOKEN_EXPIRED(HttpStatus.UNAUTHORIZED, "A004", "토큰이 만료되었습니다."),
    TOKEN_INVALID(HttpStatus.UNAUTHORIZED, "A005", "유효하지 않은 토큰입니다."),

    // ===== MEMBER (M) =====
    MEMBER_NOT_FOUND(HttpStatus.NOT_FOUND, "M001", "존재하지 않는 회원입니다."),

    // ===== PRODUCT (P) =====
    PRODUCT_NOT_FOUND(HttpStatus.NOT_FOUND, "P001", "존재하지 않는 상품입니다."),
    PRODUCT_FORBIDDEN(HttpStatus.FORBIDDEN, "P002", "본인의 상품만 수정/삭제할 수 있습니다."),
    PRICE_UPDATE_NOT_ALLOWED(HttpStatus.BAD_REQUEST, "P003", "예약중/거래중 상태에서는 가격을 수정할 수 없습니다."),
    DELETE_NOT_ALLOWED(HttpStatus.BAD_REQUEST, "P004", "예약중/거래중 상태에서는 상품을 삭제할 수 없습니다."),
    SELF_RESERVATION(HttpStatus.BAD_REQUEST, "P005", "본인의 상품은 예약할 수 없습니다."),

    // ===== TRADE (T) =====
    TRADE_NOT_FOUND(HttpStatus.NOT_FOUND, "T001", "존재하지 않는 거래입니다."),
    ALREADY_RESERVED(HttpStatus.CONFLICT, "T002", "이미 예약된 상품입니다. 잠시 후 다시 확인해보세요."),
    INVALID_STATUS_TRANSITION(HttpStatus.BAD_REQUEST, "T003", "현재 상태에서는 해당 전이가 불가능합니다."),
    TRADE_FORBIDDEN(HttpStatus.FORBIDDEN, "T004", "해당 거래에 대한 권한이 없습니다."),
    LOCK_TIMEOUT(HttpStatus.CONFLICT, "T005", "요청이 처리 중입니다. 잠시 후 다시 시도해주세요."),

    // ===== CHAT (C) =====
    CHAT_ROOM_NOT_FOUND(HttpStatus.NOT_FOUND, "C001", "존재하지 않는 채팅방입니다."),
    SELF_CHAT(HttpStatus.BAD_REQUEST, "C002", "본인의 판매글에는 채팅을 시작할 수 없습니다."),
    CHAT_FORBIDDEN(HttpStatus.FORBIDDEN, "C003", "해당 채팅방에 대한 권한이 없습니다."),

    // ===== REVIEW (R) =====
    REVIEW_NOT_ALLOWED(HttpStatus.BAD_REQUEST, "R001", "거래 완료(SOLD) 상태에서만 리뷰를 작성할 수 있습니다."),
    REVIEW_ALREADY_EXISTS(HttpStatus.CONFLICT, "R002", "이미 작성한 리뷰가 있습니다."),
    REVIEW_FORBIDDEN(HttpStatus.FORBIDDEN, "R003", "해당 거래의 구매자만 리뷰를 작성할 수 있습니다."),

    // ===== LIKE (L) =====
    LIKE_ALREADY_EXISTS(HttpStatus.CONFLICT, "L001", "이미 찜한 상품입니다."),
    LIKE_NOT_FOUND(HttpStatus.NOT_FOUND, "L002", "찜하지 않은 상품입니다."),

    // ===== GLOBAL/COMMON (G) =====
    INVALID_REQUEST(HttpStatus.BAD_REQUEST, "G001", "입력값이 올바르지 않습니다."),
    NOT_FOUND(HttpStatus.NOT_FOUND, "G002", "요청한 리소스를 찾을 수 없습니다."),
    FORBIDDEN(HttpStatus.FORBIDDEN, "G003", "접근 권한이 없습니다."),
    INTERNAL_ERROR(HttpStatus.INTERNAL_SERVER_ERROR, "G004", "서버 오류가 발생했습니다.");

    private final HttpStatus httpStatus;
    private final String code;       // API 응답 JSON의 "code" 필드값 — 도메인 접두사 + 번호 (예: "P001")
    private final String message;    // 기본 메시지 (throw 시 별도 지정 가능)
}
```

> **코드 체계 — 도메인 접두사 + 번호**:
>
> | 접두사 | 도메인 | 범위 |
> |--------|--------|------|
> | `A` | Auth (인증) | A001 ~ A005 |
> | `M` | Member (회원) | M001 ~ |
> | `P` | Product (상품) | P001 ~ P005 |
> | `T` | Trade (거래) | T001 ~ T005 |
> | `C` | Chat (채팅) | C001 ~ C003 |
> | `R` | Review (리뷰) | R001 ~ R003 |
> | `L` | Like (찜) | L001 ~ L002 |
> | `G` | Global (공통) | G001 ~ G004 |
>
> - enum 이름(`PRODUCT_FORBIDDEN`, `TRADE_FORBIDDEN`): Java 코드 내 식별자 — 도메인·의미 명확
> - `code` 필드(`"P002"`, `"T004"`): API 응답에 노출되는 클라이언트 계약값 — 짧고 고유
> - 이 분리 덕분에 내부 로직 세분화(도메인별 enum)와 클라이언트 연동(번호 코드)을 동시에 유지한다.

---

## 2. Exception 계층 구조

```java
// global/exception/BusinessException.java  ← 비즈니스 예외 최상위
@Getter
public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }

    /** 기본 메시지 대신 동적 메시지를 사용할 때 */
    public BusinessException(ErrorCode errorCode, String detailMessage) {
        super(detailMessage);
        this.errorCode = errorCode;
    }
}
```

```java
// global/exception/NotFoundException.java  → 404
public class NotFoundException extends BusinessException {
    public NotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }
}

// global/exception/InvalidRequestException.java  → 400
public class InvalidRequestException extends BusinessException {
    public InvalidRequestException(ErrorCode errorCode) {
        super(errorCode);
    }
    public InvalidRequestException(ErrorCode errorCode, String detailMessage) {
        super(errorCode, detailMessage);
    }
}

// global/exception/ForbiddenException.java  → 403
public class ForbiddenException extends BusinessException {
    public ForbiddenException(ErrorCode errorCode) {
        super(errorCode);
    }
}

// global/exception/ConflictException.java  → 409 (retryAfter 선택적 포함)
@Getter
public class ConflictException extends BusinessException {

    private final Integer retryAfter;  // null이면 응답에 미포함

    public ConflictException(ErrorCode errorCode) {
        super(errorCode);
        this.retryAfter = null;
    }

    /** ALREADY_RESERVED, LOCK_TIMEOUT 등 재시도 안내가 필요한 경우 */
    public ConflictException(ErrorCode errorCode, int retryAfter) {
        super(errorCode);
        this.retryAfter = retryAfter;
    }
}

// global/exception/LockTimeoutException.java  → 409 (DB 락 대기 타임아웃 전용)
public class LockTimeoutException extends ConflictException {
    public LockTimeoutException() {
        super(ErrorCode.LOCK_TIMEOUT, 1);
    }
}
```

### 계층 구조 요약

```
RuntimeException
└── BusinessException                 ← 모든 비즈니스 예외의 루트
    ├── NotFoundException             → 404
    ├── InvalidRequestException       → 400
    ├── ForbiddenException            → 403
    ├── ConflictException             → 409  (retryAfter 포함 가능)
    │   └── LockTimeoutException      → 409  (DB 락 타임아웃 전용)
    └── (추가 필요 시 확장)
```

> **UnauthorizedException을 별도로 만들지 않는 이유**:
> 401 UNAUTHORIZED는 Spring Security 필터 체인(`JwtAuthEntryPoint`)에서 처리되며,
> 비즈니스 레이어에 도달하기 전에 차단된다. 따라서 `@ExceptionHandler` 대상이 아니다.

---

## 3. ErrorResponse DTO

```java
// global/common/ErrorResponse.java
@Getter
public class ErrorResponse {

    private final String code;
    private final String message;
    private final String timestamp;
    private List<FieldErrorDetail> errors;   // @Valid 유효성 실패 시만 포함
    private Integer retryAfter;              // ALREADY_RESERVED, LOCK_TIMEOUT 시만 포함

    private ErrorResponse(String code, String message) {
        this.code = code;
        this.message = message;
        this.timestamp = LocalDateTime.now().toString();
    }

    /** 단순 비즈니스 에러 */
    public static ErrorResponse of(ErrorCode errorCode) {
        return new ErrorResponse(errorCode.getCode(), errorCode.getMessage());
    }

    /** 동적 메시지 오버라이드 */
    public static ErrorResponse of(ErrorCode errorCode, String detailMessage) {
        return new ErrorResponse(errorCode.getCode(), detailMessage);
    }

    /** retryAfter 포함 */
    public static ErrorResponse of(ErrorCode errorCode, Integer retryAfter) {
        ErrorResponse response = new ErrorResponse(errorCode.getCode(), errorCode.getMessage());
        response.retryAfter = retryAfter;
        return response;
    }

    /** @Valid 유효성 실패 — 필드별 에러 목록 포함 */
    public static ErrorResponse ofValidation(List<FieldError> fieldErrors) {
        ErrorResponse response = new ErrorResponse(
            ErrorCode.INVALID_REQUEST.getCode(),
            ErrorCode.INVALID_REQUEST.getMessage()
        );
        response.errors = fieldErrors.stream()
            .map(fe -> new FieldErrorDetail(fe.getField(), fe.getDefaultMessage()))
            .toList();
        return response;
    }

    @Getter
    @AllArgsConstructor
    public static class FieldErrorDetail {
        private final String field;
        private final String message;
    }
}
```

**응답 JSON 형태**:

```json
// 단순 에러
{
  "code": "P001",
  "message": "존재하지 않는 상품입니다.",
  "timestamp": "2025-06-01T10:00:00"
}

// 유효성 에러 (@Valid 실패)
{
  "code": "G001",
  "message": "입력값이 올바르지 않습니다.",
  "timestamp": "2025-06-01T10:00:00",
  "errors": [
    { "field": "title", "message": "제목은 2자 이상 40자 이하여야 합니다." },
    { "field": "price", "message": "가격은 100원 이상이어야 합니다." }
  ]
}

// 재시도 안내 에러 (409)
{
  "code": "T002",
  "message": "이미 예약된 상품입니다. 잠시 후 다시 확인해보세요.",
  "timestamp": "2025-06-01T10:00:00",
  "retryAfter": 1
}
```

---

## 4. GlobalExceptionHandler

```java
// global/exception/GlobalExceptionHandler.java
@Slf4j
@RestControllerAdvice
public class GlobalExceptionHandler {

    // ── 1. ConflictException (retryAfter 포함 가능) ─────────────────────────
    @ExceptionHandler(ConflictException.class)
    public ResponseEntity<ErrorResponse> handleConflict(ConflictException e) {
        ErrorCode ec = e.getErrorCode();
        ErrorResponse body = (e.getRetryAfter() != null)
            ? ErrorResponse.of(ec, e.getRetryAfter())
            : ErrorResponse.of(ec, e.getMessage());
        return ResponseEntity.status(ec.getHttpStatus()).body(body);
    }

    // ── 2. 나머지 BusinessException (NotFoundException, ForbiddenException 등) ─
    @ExceptionHandler(BusinessException.class)
    public ResponseEntity<ErrorResponse> handleBusiness(BusinessException e) {
        ErrorCode ec = e.getErrorCode();
        return ResponseEntity
            .status(ec.getHttpStatus())
            .body(ErrorResponse.of(ec, e.getMessage()));
    }

    // ── 3. @Valid / @Validated 유효성 실패 ──────────────────────────────────
    @ExceptionHandler(MethodArgumentNotValidException.class)
    public ResponseEntity<ErrorResponse> handleValidation(MethodArgumentNotValidException e) {
        return ResponseEntity
            .badRequest()
            .body(ErrorResponse.ofValidation(e.getBindingResult().getFieldErrors()));
    }

    // ── 4. @RequestParam / @PathVariable 타입 불일치 ────────────────────────
    @ExceptionHandler(MethodArgumentTypeMismatchException.class)
    public ResponseEntity<ErrorResponse> handleTypeMismatch(MethodArgumentTypeMismatchException e) {
        return ResponseEntity
            .badRequest()
            .body(ErrorResponse.of(ErrorCode.INVALID_REQUEST,
                String.format("'%s' 파라미터의 값이 올바르지 않습니다.", e.getName())));
    }

    // ── 5. 지원하지 않는 HTTP 메서드 ────────────────────────────────────────
    @ExceptionHandler(HttpRequestMethodNotSupportedException.class)
    public ResponseEntity<ErrorResponse> handleMethodNotSupported(
            HttpRequestMethodNotSupportedException e) {
        return ResponseEntity
            .status(HttpStatus.METHOD_NOT_ALLOWED)
            .body(ErrorResponse.of(ErrorCode.INVALID_REQUEST,
                String.format("'%s' 메서드는 지원하지 않습니다.", e.getMethod())));
    }

    // ── 6. DB unique constraint 위반 ────────────────────────────────────────
    //      (예: LIKE, CHAT_ROOM 중복 INSERT 시 DB 레벨에서 올라오는 예외)
    //      CHAT_ROOM 중복은 에러 응답보다 Service 단의 재조회(idempotent return)로 우선 해결한다.
    @ExceptionHandler(DataIntegrityViolationException.class)
    public ResponseEntity<ErrorResponse> handleDataIntegrity(DataIntegrityViolationException e) {
        log.warn("DataIntegrityViolation: {}", e.getMessage());

        String message = e.getMostSpecificCause() != null
            ? e.getMostSpecificCause().getMessage() : e.getMessage();

        // LIKE UNIQUE 제약조건 위반은 범용 메시지 대신 L001로 매핑
        if (message != null && message.contains("uk_like_member_product")) {
            return ResponseEntity
                .status(HttpStatus.CONFLICT)
                .body(ErrorResponse.of(ErrorCode.LIKE_ALREADY_EXISTS));
        }

        return ResponseEntity
            .status(HttpStatus.CONFLICT)
            .body(ErrorResponse.of(ErrorCode.INVALID_REQUEST, "중복되거나 이미 처리된 요청입니다."));
    }

    // ── 7. 미처리 예외 폴백 (시스템 에러) ───────────────────────────────────
    @ExceptionHandler(Exception.class)
    public ResponseEntity<ErrorResponse> handleUnexpected(Exception e,
                                                          HttpServletRequest request) {
        log.error("[INTERNAL_ERROR] {} {}: {}",
            request.getMethod(), request.getRequestURI(), e.getMessage(), e);
        return ResponseEntity
            .status(HttpStatus.INTERNAL_SERVER_ERROR)
            .body(ErrorResponse.of(ErrorCode.INTERNAL_ERROR));
    }
}
```

> **Spring Security 예외 처리 위치**:
> `UNAUTHORIZED(401)` 에러는 필터 체인에서 처리된다. `@ExceptionHandler`는 디스패처 서블릿 이후 단계이므로, JWT 필터에서 발생하는 인증 실패는 `JwtAuthEntryPoint`에서 직접 응답을 작성한다.
>
> ```java
> // global/security/JwtAuthEntryPoint.java
> @Component
> public class JwtAuthEntryPoint implements AuthenticationEntryPoint {
>     @Override
>     public void commence(HttpServletRequest request, HttpServletResponse response,
>                          AuthenticationException e) throws IOException {
>         response.setContentType(MediaType.APPLICATION_JSON_VALUE);
>         response.setStatus(HttpStatus.UNAUTHORIZED.value());
>         response.getWriter().write("""
>             {"code":"A003","message":"인증이 필요합니다.","timestamp":"%s"}
>             """.formatted(LocalDateTime.now()));
>     }
> }
> ```

---

## 5. 도메인별 에러 발생 상황 매핑

### Auth

| 상황 | throw | ErrorCode |
|------|-------|-----------|
| 이메일 중복 가입 | `ConflictException(DUPLICATE_EMAIL)` | 409 |
| 비밀번호 불일치 | `InvalidRequestException(INVALID_CREDENTIALS)` | 401 → Security에서 처리 |
| JWT 만료 | `JwtAuthEntryPoint` | 401 |
| JWT 형식 오류 | `JwtAuthEntryPoint` | 401 |

### Member

| 상황 | throw | ErrorCode |
|------|-------|-----------|
| 회원 미존재 | `NotFoundException(MEMBER_NOT_FOUND)` | 404 |

### Product

| 상황 | throw | ErrorCode |
|------|-------|-----------|
| 상품 미존재 | `NotFoundException(PRODUCT_NOT_FOUND)` | 404 |
| 타인 상품 수정/삭제 시도 | `ForbiddenException(PRODUCT_FORBIDDEN)` | 403 |
| 예약/거래중 가격 수정 | `InvalidRequestException(PRICE_UPDATE_NOT_ALLOWED)` | 400 |
| 예약/거래중 상품 삭제 | `InvalidRequestException(DELETE_NOT_ALLOWED)` | 400 |
| 본인 상품 예약 시도 | `InvalidRequestException(SELF_RESERVATION)` | 400 |
| @Valid 유효성 실패 | (MethodArgumentNotValidException, 핸들러 자동 처리) | 400 |

### Trade

| 상황 | throw | ErrorCode |
|------|-------|-----------|
| 거래 미존재 | `NotFoundException(TRADE_NOT_FOUND)` | 404 |
| 이미 예약된 상품 (동시 요청 포함) | `ConflictException(ALREADY_RESERVED, 1)` | 409 + retryAfter |
| 허용되지 않는 상태 전이 | `InvalidRequestException(INVALID_STATUS_TRANSITION)` | 400 |
| 타인 거래 상태 변경 시도 | `ForbiddenException(TRADE_FORBIDDEN)` | 403 |
| DB 락 대기 타임아웃 | `LockTimeoutException()` | 409 + retryAfter |

### Chat

| 상황 | throw | ErrorCode |
|------|-------|-----------|
| 채팅방 미존재 | `NotFoundException(CHAT_ROOM_NOT_FOUND)` | 404 |
| 본인 상품에 채팅 시도 | `InvalidRequestException(SELF_CHAT)` | 400 |
| 타인 채팅방 접근 | `ForbiddenException(CHAT_FORBIDDEN)` | 403 |

### Review

| 상황 | throw | ErrorCode |
|------|-------|-----------|
| SOLD 상태 아닌데 리뷰 시도 | `InvalidRequestException(REVIEW_NOT_ALLOWED)` | 400 |
| 중복 리뷰 작성 | `ConflictException(REVIEW_ALREADY_EXISTS)` | 409 |
| 구매자 아닌데 리뷰 시도 | `ForbiddenException(REVIEW_FORBIDDEN)` | 403 |

### Like

| 상황 | throw | ErrorCode |
|------|-------|-----------|
| 중복 찜 요청 | `ConflictException(LIKE_ALREADY_EXISTS)` | 409 |
| 찜하지 않은 상품 취소 요청 | `NotFoundException(LIKE_NOT_FOUND)` | 404 |

---

## 6. 전체 에러코드 참조표

| code | ErrorCode (enum) | HTTP | 메시지 |
|------|------------------|------|--------|
| **A001** | DUPLICATE_EMAIL | 409 | 이미 사용 중인 이메일입니다. |
| **A002** | INVALID_CREDENTIALS | 401 | 이메일 또는 비밀번호가 올바르지 않습니다. |
| **A003** | UNAUTHORIZED | 401 | 인증이 필요합니다. |
| **A004** | TOKEN_EXPIRED | 401 | 토큰이 만료되었습니다. |
| **A005** | TOKEN_INVALID | 401 | 유효하지 않은 토큰입니다. |
| **M001** | MEMBER_NOT_FOUND | 404 | 존재하지 않는 회원입니다. |
| **P001** | PRODUCT_NOT_FOUND | 404 | 존재하지 않는 상품입니다. |
| **P002** | PRODUCT_FORBIDDEN | 403 | 본인의 상품만 수정/삭제할 수 있습니다. |
| **P003** | PRICE_UPDATE_NOT_ALLOWED | 400 | 예약중/거래중 상태에서는 가격을 수정할 수 없습니다. |
| **P004** | DELETE_NOT_ALLOWED | 400 | 예약중/거래중 상태에서는 상품을 삭제할 수 없습니다. |
| **P005** | SELF_RESERVATION | 400 | 본인의 상품은 예약할 수 없습니다. |
| **T001** | TRADE_NOT_FOUND | 404 | 존재하지 않는 거래입니다. |
| **T002** | ALREADY_RESERVED | 409 | 이미 예약된 상품입니다. 잠시 후 다시 확인해보세요. |
| **T003** | INVALID_STATUS_TRANSITION | 400 | 현재 상태에서는 해당 전이가 불가능합니다. |
| **T004** | TRADE_FORBIDDEN | 403 | 해당 거래에 대한 권한이 없습니다. |
| **T005** | LOCK_TIMEOUT | 409 | 요청이 처리 중입니다. 잠시 후 다시 시도해주세요. |
| **C001** | CHAT_ROOM_NOT_FOUND | 404 | 존재하지 않는 채팅방입니다. |
| **C002** | SELF_CHAT | 400 | 본인의 판매글에는 채팅을 시작할 수 없습니다. |
| **C003** | CHAT_FORBIDDEN | 403 | 해당 채팅방에 대한 권한이 없습니다. |
| **R001** | REVIEW_NOT_ALLOWED | 400 | 거래 완료(SOLD) 상태에서만 리뷰를 작성할 수 있습니다. |
| **R002** | REVIEW_ALREADY_EXISTS | 409 | 이미 작성한 리뷰가 있습니다. |
| **R003** | REVIEW_FORBIDDEN | 403 | 해당 거래의 구매자만 리뷰를 작성할 수 있습니다. |
| **L001** | LIKE_ALREADY_EXISTS | 409 | 이미 찜한 상품입니다. |
| **L002** | LIKE_NOT_FOUND | 404 | 찜하지 않은 상품입니다. |
| **G001** | INVALID_REQUEST | 400 | 입력값이 올바르지 않습니다. |
| **G002** | NOT_FOUND | 404 | 요청한 리소스를 찾을 수 없습니다. |
| **G003** | FORBIDDEN | 403 | 접근 권한이 없습니다. |
| **G004** | INTERNAL_ERROR | 500 | 서버 오류가 발생했습니다. |

---

## 7. 사용 예시 (서비스 레이어)

```java
// TradeServiceImpl.java
@Transactional
public TradeResponse reserveWithPessimisticLock(Long productId, Long buyerId) {
    Product product = productRepository.findByIdWithLock(productId)
        .orElseThrow(() -> new NotFoundException(ErrorCode.PRODUCT_NOT_FOUND));

    if (product.getSellerId().equals(buyerId)) {
        throw new InvalidRequestException(ErrorCode.SELF_RESERVATION);
    }

    if (product.getStatus() != ProductStatus.SALE) {
        throw new ConflictException(ErrorCode.ALREADY_RESERVED, 1);  // retryAfter=1초
    }

    product.changeStatus(ProductStatus.RESERVED);
    Trade trade = Trade.create(product, buyerId);
    return TradeResponse.from(tradeRepository.save(trade));
}

// TradeServiceImpl.java
public void changeStatus(Long tradeId, TradeStatus newStatus, Long requesterId) {
    Trade trade = tradeRepository.findById(tradeId)
        .orElseThrow(() -> new NotFoundException(ErrorCode.TRADE_NOT_FOUND));

    if (!trade.isParticipant(requesterId)) {
        throw new ForbiddenException(ErrorCode.TRADE_FORBIDDEN);
    }

    if (!trade.canTransitionTo(newStatus, requesterId)) {
        throw new InvalidRequestException(ErrorCode.INVALID_STATUS_TRANSITION);
    }

    trade.changeStatus(newStatus);
    trade.getProduct().syncStatus(newStatus);
}

// ReviewService.java
public ReviewResponse createReview(Long tradeId, Long reviewerId, CreateReviewRequest request) {
    Trade trade = tradeRepository.findById(tradeId)
        .orElseThrow(() -> new NotFoundException(ErrorCode.TRADE_NOT_FOUND));

    if (!trade.getBuyerId().equals(reviewerId)) {
        throw new ForbiddenException(ErrorCode.REVIEW_FORBIDDEN);
    }

    if (trade.getStatus() != TradeStatus.SOLD) {
        throw new InvalidRequestException(ErrorCode.REVIEW_NOT_ALLOWED);
    }

    if (reviewRepository.existsByTradeId(tradeId)) {
        throw new ConflictException(ErrorCode.REVIEW_ALREADY_EXISTS);
    }

    // ...
}
```

---

## 8. 패키지 구조 반영

```
global/
├── exception/
│   ├── ErrorCode.java                  ← enum (이 문서 기준)
│   ├── GlobalExceptionHandler.java     ← @RestControllerAdvice
│   ├── BusinessException.java          ← 최상위 (ErrorCode 보유)
│   ├── NotFoundException.java          → 404
│   ├── InvalidRequestException.java    → 400
│   ├── ForbiddenException.java         → 403
│   ├── ConflictException.java          → 409 (retryAfter 포함 가능)
│   └── LockTimeoutException.java       → 409 (DB 락 타임아웃 전용)
└── common/
    └── ErrorResponse.java              ← 응답 DTO (errors[], retryAfter 선택적)
```
